Closed
Bug 1711868
Opened 5 years ago
Closed 5 years ago
Crash in [@ wgpu_server_pipeline_layout_drop]
Categories
(Core :: Graphics: WebGPU, defect)
Tracking
()
RESOLVED
FIXED
90 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox88 | --- | disabled |
| firefox89 | --- | disabled |
| firefox90 | --- | fixed |
People
(Reporter: calixte, Assigned: kvark)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/048e4a92-617c-4734-8c62-c1cbf0210519
MOZ_CRASH Reason: Unexpected backend Empty
Top 10 frames of crashing thread:
0 XUL RustMozCrash mozglue/static/rust/wrappers.cpp:17
1 XUL mozglue_static::panic_hook mozglue/static/rust/lib.rs:89
2 XUL core::ops::function::Fn::call /builds/worker/fetches/rustc/lib/rustlib/src/rust/library/core/src/ops/function.rs:70
3 XUL std::panicking::rust_panic_with_hook library/std/src/panicking.rs:595
4 XUL std::panicking::begin_panic_handler::{{closure}} library/std/src/panicking.rs:497
5 XUL std::sys_common::backtrace::__rust_end_short_backtrace library/std/src/sys_common/backtrace.rs:141
6 XUL rust_begin_unwind library/std/src/panicking.rs:493
7 XUL std::panicking::begin_panic_fmt library/std/src/panicking.rs:435
8 XUL wgpu_server_pipeline_layout_drop gfx/wgpu_bindings/src/server.rs:602
9 XUL mozilla::webgpu::WebGPUParent::RecvImplicitLayoutDestroy dom/webgpu/ipc/WebGPUParent.cpp:465
There are 15 crashes (from 1 installation) in nightly 90 with buildid 20210518213628. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1709462.
[1] https://hg.mozilla.org/mozilla-central/rev?node=dfd34fb1aade
Severity: -- → S2
Flags: needinfo?(dmalyshau)
| Assignee | ||
Comment 1•5 years ago
|
||
Thank you for filing!
Assignee: nobody → dmalyshau
Flags: needinfo?(dmalyshau)
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/996c8dfba713
Only free WebGPU implicit layouts if they are given r=jimb
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•