Bug 1711868 - Only free WebGPU implicit layouts if they are given r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D115537