dom/webgpu/ComputePipeline.cpp
@@ -31,8 +31,10 @@ void ComputePipeline::Cleanup() {
     auto bridge = mParent->GetBridge();
     if (bridge && bridge->IsOpen()) {
       bridge->SendComputePipelineDestroy(mId);
-      bridge->SendImplicitLayoutDestroy(mImplicitPipelineLayoutId,
-                                        mImplicitBindGroupLayoutIds);
+      if (mImplicitPipelineLayoutId) {
+        bridge->SendImplicitLayoutDestroy(mImplicitPipelineLayoutId,
+                                          mImplicitBindGroupLayoutIds);
+      }
     }
   }
 }
